<resources>
    <string name="app_name">diabetesPredictor</string>
    <string name="button_text">Predictor</string>
    <string name="button2_text">Informations</string>
    <string name="button3_text">Foods</string>
    <string name="button4_text">Medicines</string>
    <string name="button5_text">FAQ</string>
    <string name="textview1_text">To get the prediction click below</string>
    <string name="textview2_text">Here the inputs will be taken</string>
    <string name="textview3_text">To know helpful details about diabetics press the button below</string>
    <string name="textview4_text">To know about the mandatory diet click below</string>
    <string name="textview5_text">To know about the meds click below</string>
    <string name="textview6_text">To know about the general knowledge click below</string>
    <string name="textview7_text">Informations about foods would be here</string>
    <string name="textview8_text">Informations about meds would be here</string>
    <string name="textview9_text">Informations about faq would be here</string>
    <string name="textview">TextView</string>


</resources>