<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview1_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        />


<Button
    android:id="@+id/buttonId"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/button_text"
    android:textSize="20sp"
android:layout_marginBottom="120dp"
    android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview3_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        />
    <Button

        android:id="@+id/button2Id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button2_text"
        android:textSize="20sp"

        android:textStyle="bold"/>

</LinearLayout>